Move histogram a little to the right to avoid overlap with onhover highlight.

--- a/src/uniprotkb/components/results/styles/group-by.module.scss
+++ b/src/uniprotkb/components/results/styles/group-by.module.scss
@@ -115,6 +115,7 @@
 
       .label {
         display: inline-block;
+        margin-left: 0.55rem;
       }
 
       .bar {
